2012-10-15  Zoltan Tuza <zoltuz@zoltuz-laptop>

	* via SF shell access: svn post-commit script has been added 

2012-10-07  Zoltan Tuza <zoltuz@zoltuz-laptop>

	* txtl_combine: bugfix, to carry UserData during mixing
	* txtl_plot: improved calculation of total concentration
	* txtl_setupparameters: new config file to handle core parameters
	at one place. (many other files have been adjusted becouse of that)

2012-10-07  Richard Murray  <murray@altura.local>

	* txtl_dna.m: removed this file, since its functionality is replaced
	by txtl_adddna()

	* txtl_protection.m, protection.m: moved txtl_protection.m to
	protection.m.  As a general rule, only functions that are part of
	the toolbox (rather than examples) should start with txtl_

	* negautoreg.m: changed DNA separator from = to --

	* txtl_prom_placI.m: corrected error in the way that reactions were
	specified

	* geneexpr.m: changed DNA separator from = to --

	* concurrentSigmaFactors.m: use txtl_adddna() instead of txtl_dna()

	* txtl_plot.m: changed DNA separator from = to --

2012-10-04 Zoltan Tuza <zoltuz@zoltuz-laptop>
	* txtl_runsim.m: added SimBiology Simulation Data object handling 
	capability through varargin.
	* txtl_plot.m:  calculating and plotting the total concentration of
	selected proteins.

2012-10-02 Zoltan Tuza <zoltuz@zoltuz-laptop>
	* txtl_runsim.m: first version of txtl_runsim, it handles all the simulation 
	related settings and also can continue a simulation from the end of a previous simulation.
	(data and time vectors are merged together automatically)

2012-10-01 Zoltan Tuza <zoltuz@zoltuz-laptop>

	* txtl_plot.m: added regular expression handling capability for 
	Gene Expression and DNA and mRNA plots

2012-09-29  Richard Murray  <murray@altura.local>

	* negautoreg.m: got rid of junk DNA in this example; updated
	plotting to handle new RNAP70 format (starts at zero => normalize by
	max, not initial)

	* txtl_extract.m: tweaked the RNAP + Sigma70 reaction to prevent