@@ -12,19 +12,25 @@ tube2 = txtl_buffer('b1');
 
 % Set up a tube that will contain our DNA
 tube3 = txtl_newtube('circuit');
-%dna_sigma28 = txtl_dna(tube3, 'p70(50)', 'rbs(20)', 'sigma28(600)', 10, 'linear');
-dna_deGFP =   txtl_dna(tube3, 'p70(50)', 'rbs(20)', 'deGFP(1000)', 10, 'linear');
-dna_gamS =    txtl_dna(tube3, 'p70(50)', 'rbs(20)', 'gamS(1000)', 1, 'plasmid');
+dna_sigma28 = txtl_adddna(tube3, 'p70(50)', 'rbs(20)', 'sigma28(600)', 10, 'linear');
+dna_deGFP =   txtl_adddna(tube3, 'p70(50)', 'rbs(20)', 'deGFP(1000)', 10, 'linear');
+dna_gamS =    txtl_adddna(tube3, 'p70(50)', 'rbs(20)', 'gamS(1000)', 1, 'plasmid');
+
+tube4 = txtl_newtube('no_s28_circuit');
+txtl_adddna(tube4, 'p70(50)', 'rbs(20)', 'deGFP(1000)', 10, 'linear');
+txtl_adddna(tube4, 'p70(50)', 'rbs(20)', 'gamS(1000)', 1, 'plasmid');
 
 % Mix the contents of the individual tubes and add some inducer
 well_a1 = txtl_combine([tube1, tube2, tube3], [22, 8, 3]);
+well_b1 = txtl_combine([tube1, tube2, tube4], [22, 8, 3]);
 
 txtl_setup_parameters(well_a1);
+txtl_setup_parameters(well_b1);
 
 
 %% Run a simulation
 configsetObj = getconfigset(well_a1, 'active');
-simulationTime = 1.5*60*60;
+simulationTime = 1*60*60;
 set(configsetObj, 'StopTime', simulationTime);
 set(configsetObj, 'SolverType', 'ode23s');
 
@@ -34,32 +40,33 @@ t_ode = simData.Time;
 x_ode = simData.Data;
 names = simData.DataNames;
 
+configsetObj_b1 = getconfigset(well_b1, 'active');
+set(configsetObj_b1, 'StopTime', simulationTime);
+set(configsetObj_b1, 'SolverType', 'ode23s');
 
-%2dn run
-% txtl_continue_simulation(simData,well_a1);
-% 
-% %txtl_addspecies(well_a1, 'RNAP', 10);
-% simData_2 = sbiosimulate(well_a1, configsetObj);
-% t_ode_2 = simData_2.Time;
-% x_ode_2 = simData_2.Data;
-% 
-% t_ode = [t_ode; t_ode_2+simulationTime]; % don't forget to adjust the time
-% x_ode = [x_ode; x_ode_2];
+simData_no28 = sbiosimulate(well_b1, configsetObj_b1);
+t_ode_nos28 = simData_no28.Time;
+x_ode_nos28 = simData_no28.Data;
+names_nos28 = simData_no28.DataNames;
+
+%lb = 0;
+%fmincon(@(x)mycostfun(x,x_ode_sim,t_ode_sim,well_b1,configsetObj_b1),0.08,[],[],[],[],lb);
+
 
 
 %% plot the result
 
 % DNA and mRNA plot
 dataGroups{1,1} = 'DNA and mRNA';
-dataGroups{1,2} = {'#(^DNA (\w+[-=]*)*)'}
-dataGroups{1,3} = {'b-','r-','b--','r--','y-','c-'}
+dataGroups{1,2} = {'#(^DNA (\w+[-=]*)*)'};
+dataGroups{1,3} = {'b-','r-','b--','r--','y-','c-'};
 
 
 
 % Gene Expression Plot
 dataGroups{2,1} = 'Gene Expression';
 dataGroups{2,2} = {'protein deGFP*'};
-dataGroups{2,3} = {'b-','g-','r-','g--','b--','b-.'}
+dataGroups{2,3} = {'b-','g-','r-','g--','b--','b-.'};
 
 
 
@@ -67,6 +74,9 @@ dataGroups{2,3} = {'b-','g-','r-','g--','b--','b-.'}
 dataGroups{3,1} = 'Resource usage';
 
 txtl_plot(t_ode,x_ode,well_a1,dataGroups)
+txtl_plot(t_ode_nos28,x_ode_nos28,well_b1,dataGroups)
+
+
 
 
 
