@@ -1,0 +1,84 @@
+% txtl_prom_p28.m - promoter information for p28 promoter
+% Zoltan A Tuza,  Sep 2012
+%
+% This file contains a description of the p28 promoter.
+% Calling the function txtl_prom_p28() will set up the reactions for
+% transcription with the measured binding rates and transription rates.
+
+
+%
+% Copyright (c) 2012 by California Institute of Technology
+% All rights reserved.
+%
+% Redistribution and use in source and binary forms, with or without
+% modification, are permitted provided that the following conditions are
+% met:
+%
+%   1. Redistributions of source code must retain the above copyright
+%      notice, this list of conditions and the following disclaimer.
+%
+%   2. Redistributions in binary form must reproduce the above copyright 
+%      notice, this list of conditions and the following disclaimer in the 
+%      documentation and/or other materials provided with the distribution.
+%
+%   3. The name of the author may not be used to endorse or promote products 
+%      derived from this software without specific prior written permission.
+%
+% THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
+% IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+% WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+% DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT,
+% INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+% (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+% SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
+% HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
+% STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING
+% IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+% POSSIBILITY OF SUCH DAMAGE.
+
+function Rlist = txtl_prom_p28(tube, dna, rna)
+
+% Parameters that describe this promoter
+%! TODO: replace these values with correct values
+kf_p28 = log(2)/0.1;			% 100 ms bind rate
+kr_p28 = 10 * kf_p28;			% Km of 10 (same as p70, from VN)
+ktx_p28 = log(2)/(rna.UserData/30);	% 30 base/second transcription
+
+% Create strings for reactants and products
+DNA = ['[' dna.Name ']'];		% DNA species name for reactions
+RNA = ['[' rna.Name ']'];		% RNA species name for reactions
+RNAP = 'RNAP28';			% RNA polymerase name for reactions
+RNAPbound = ['RNAP28:' dna.Name];
+
+% Set up binding reaction
+Robj1 = addreaction(tube, [DNA ' + ' RNAP ' <-> [' RNAPbound ']']);
+Kobj1 = addkineticlaw(Robj1, 'MassAction');
+Pobj1f = addparameter(Kobj1, 'kf', kf_p28);
+Pobj1r = addparameter(Kobj1, 'kr', kr_p28);
+set(Kobj1, 'ParameterVariableNames', {'kf', 'kr'});
+
+%
+% Now put in the reactions for the utilization of NTPs
+% Use an enzymatic reaction to proper rate limiting
+%
+
+Rlist1 = txtl_rnap_rnap70(tube, dna, rna, RNAPbound);
+
+% %
+% % Add reactions for sequestration of promoter by TetRdimer 
+% %
+% 
+% kf_tetR = 0.2; kr_tetR = 1;		% reaction rates (from sbio)
+% Robj4 = addreaction(tube, ...
+%   [DNA ' + [protein tetRdimer] <-> [DNA tetR:protein tetRdimer]']);
+% Kobj4 = addkineticlaw(Robj4,'MassAction');
+% Pobj4 = addparameter(Kobj4, 'k4', kf_tetR);
+% Pobj4r = addparameter(Kobj4, 'k4r', kr_tetR);
+% set(Kobj4, 'ParameterVariableNames', {'k4', 'k4r'});
+
+Rlist = [Robj1];
+
+% Automatically use MATLAB mode in Emacs (keep at end of file)
+% Local variables:
+% mode: matlab
+% End:
